--- a/Draw/View/ShopView/ColorShopView~iPad.xib
+++ b/Draw/View/ShopView/ColorShopView~iPad.xib
@@ -40,10 +40,9 @@
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUIImageView" id="692243264">
 						<reference key="NSNextResponder" ref="213797105"/>
-						<int key="NSvFlags">256</int>
-						<string key="NSFrameSize">{320, 460}</string>
+						<int key="NSvFlags">319</int>
+						<string key="NSFrameSize">{768, 1024}</string>
 						<reference key="NSSuperview" ref="213797105"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="418569978"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -54,11 +53,10 @@
 					</object>
 					<object class="IBUILabel" id="659072933">
 						<reference key="NSNextResponder" ref="213797105"/>
-						<int key="NSvFlags">256</int>
-						<string key="NSFrame">{{70, 51}, {136, 45}}</string>
+						<int key="NSvFlags">319</int>
+						<string key="NSFrame">{{168, 113}, {326, 100}}</string>
 						<reference key="NSSuperview" ref="213797105"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="226790822"/>
+						<reference key="NSNextKeyView" ref="436929789"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">7</int>
@@ -74,20 +72,19 @@
 						<float key="IBUIMinimumFontSize">10</float>
 						<object class="IBUIFontDescription" key="IBUIFontDescription">
 							<int key="type">1</int>
-							<double key="pointSize">19</double>
+							<double key="pointSize">38</double>
 						</object>
 						<object class="NSFont" key="IBUIFont">
 							<string key="NSName">Helvetica</string>
-							<double key="NSSize">19</double>
+							<double key="NSSize">38</double>
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
 					<object class="IBUIImageView" id="418569978">
 						<reference key="NSNextResponder" ref="213797105"/>
-						<int key="NSvFlags">256</int>
-						<string key="NSFrameSize">{320, 50}</string>
+						<int key="NSvFlags">319</int>
+						<string key="NSFrameSize">{768, 111}</string>
 						<reference key="NSSuperview" ref="213797105"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="588454488"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -98,11 +95,10 @@
 					</object>
 					<object class="IBUIButton" id="588454488">
 						<reference key="NSNextResponder" ref="213797105"/>
-						<int key="NSvFlags">256</int>
-						<string key="NSFrame">{{7, 6}, {37, 37}}</string>
+						<int key="NSvFlags">319</int>
+						<string key="NSFrame">{{16, 13}, {88, 82}}</string>
 						<reference key="NSSuperview" ref="213797105"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="659072933"/>
+						<reference key="NSNextKeyView" ref="226790822"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
@@ -135,10 +131,9 @@
 					</object>
 					<object class="IBUILabel" id="226790822">
 						<reference key="NSNextResponder" ref="213797105"/>
-						<int key="NSvFlags">256</int>
-						<string key="NSFrame">{{50, 0}, {220, 50}}</string>
+						<int key="NSvFlags">319</int>
+						<string key="NSFrame">{{120, 0}, {528, 111}}</string>
 						<reference key="NSSuperview" ref="213797105"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="427966318"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -155,20 +150,19 @@
 						<int key="IBUITextAlignment">1</int>
 						<object class="IBUIFontDescription" key="IBUIFontDescription">
 							<int key="type">1</int>
-							<double key="pointSize">20</double>
+							<double key="pointSize">40</double>
 						</object>
 						<object class="NSFont" key="IBUIFont">
 							<string key="NSName">Helvetica</string>
-							<double key="NSSize">20</double>
+							<double key="NSSize">40</double>
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
 					<object class="IBUITableView" id="436929789">
 						<reference key="NSNextResponder" ref="213797105"/>
-						<int key="NSvFlags">256</int>
-						<string key="NSFrame">{{8, 100}, {304, 350}}</string>
+						<int key="NSvFlags">319</int>
+						<string key="NSFrame">{{79.5, 239.5}, {608, 700}}</string>
 						<reference key="NSSuperview" ref="213797105"/>
-						<reference key="NSWindow"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MCAwAA</bytes>
@@ -188,11 +182,10 @@
 					</object>
 					<object class="IBUIImageView" id="427966318">
 						<reference key="NSNextResponder" ref="213797105"/>
-						<int key="NSvFlags">256</int>
-						<string key="NSFrame">{{31, 57}, {32, 34}}</string>
+						<int key="NSvFlags">319</int>
+						<string key="NSFrame">{{80, 130.5}, {64, 68}}</string>
 						<reference key="NSSuperview" ref="213797105"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="436929789"/>
+						<reference key="NSNextKeyView" ref="659072933"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<object class="NSCustomResource" key="IBUIImage">
@@ -201,9 +194,8 @@
 						</object>
 					</object>
 				</array>
-				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
+				<string key="NSFrameSize">{768, 1024}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="692243264"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -212,7 +204,6 @@
 						<int key="NSID">2</int>
 					</object>
 				</object>
-				<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 		</array>
@@ -359,48 +350,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">17</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">ColorShopView</string>
-					<string key="superclassName">UIView</string>
-					<object class="NSMutableDictionary" key="actions">
-						<string key="NS.key.0">clickBack:</string>
-						<string key="NS.object.0">id</string>
-					</object>
-					<object class="NSMutableDictionary" key="actionInfosByName">
-						<string key="NS.key.0">clickBack:</string>
-						<object class="IBActionInfo" key="NS.object.0">
-							<string key="name">clickBack:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</object>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="coinCountLabel">UILabel</string>
-						<string key="dataTableView">UITableView</string>
-						<string key="titleLabel">UILabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="coinCountLabel">
-							<string key="name">coinCountLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="dataTableView">
-							<string key="name">dataTableView</string>
-							<string key="candidateClassName">UITableView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="titleLabel">
-							<string key="name">titleLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/ColorShopView.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
