--- a/Draw/Controller/Shop/ShoppingCell~iPad.xib
+++ b/Draw/Controller/Shop/ShoppingCell~iPad.xib
@@ -35,7 +35,7 @@
 			</object>
 			<object class="IBUITableViewCell" id="410903031">
 				<reference key="NSNextResponder"/>
-				<int key="NSvFlags">292</int>
+				<int key="NSvFlags">319</int>
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUIView" id="16295551">
 						<reference key="NSNextResponder" ref="410903031"/>
@@ -43,10 +43,9 @@
 						<array class="NSMutableArray" key="NSSubviews">
 							<object class="IBUIImageView" id="1054342840">
 								<reference key="NSNextResponder" ref="16295551"/>
-								<int key="NSvFlags">319</int>
-								<string key="NSFrame">{{0, 88}, {608, 112}}</string>
+								<int key="NSvFlags">282</int>
+								<string key="NSFrame">{{0, 88}, {720, 112}}</string>
 								<reference key="NSSuperview" ref="16295551"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="954229115"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -57,10 +56,9 @@
 							</object>
 							<object class="IBUIImageView" id="841138459">
 								<reference key="NSNextResponder" ref="16295551"/>
-								<int key="NSvFlags">319</int>
-								<string key="NSFrame">{{40, 44}, {64, 68}}</string>
+								<int key="NSvFlags">301</int>
+								<string key="NSFrame">{{48, 44}, {64, 68}}</string>
 								<reference key="NSSuperview" ref="16295551"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="8811069"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -71,10 +69,9 @@
 							</object>
 							<object class="IBUIImageView" id="954229115">
 								<reference key="NSNextResponder" ref="16295551"/>
-								<int key="NSvFlags">319</int>
-								<string key="NSFrame">{{34, 10}, {78, 104}}</string>
+								<int key="NSvFlags">301</int>
+								<string key="NSFrame">{{41, 10}, {78, 104}}</string>
 								<reference key="NSSuperview" ref="16295551"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="841138459"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -85,10 +82,9 @@
 							</object>
 							<object class="IBUIImageView" id="372669938">
 								<reference key="NSNextResponder" ref="16295551"/>
-								<int key="NSvFlags">319</int>
-								<string key="NSFrame">{{265, 40}, {64, 68}}</string>
+								<int key="NSvFlags">317</int>
+								<string key="NSFrame">{{319, 40}, {64, 68}}</string>
 								<reference key="NSSuperview" ref="16295551"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="27049523"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -96,10 +92,9 @@
 							</object>
 							<object class="IBUILabel" id="27049523">
 								<reference key="NSNextResponder" ref="16295551"/>
-								<int key="NSvFlags">319</int>
-								<string key="NSFrame">{{337, 36}, {125, 74}}</string>
+								<int key="NSvFlags">301</int>
+								<string key="NSFrame">{{407, 36}, {125, 74}}</string>
 								<reference key="NSSuperview" ref="16295551"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="766934079"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -134,10 +129,9 @@
 							</object>
 							<object class="IBUILabel" id="8811069">
 								<reference key="NSNextResponder" ref="16295551"/>
-								<int key="NSvFlags">319</int>
-								<string key="NSFrame">{{120, 36}, {136, 74}}</string>
+								<int key="NSvFlags">301</int>
+								<string key="NSFrame">{{137, 36}, {136, 74}}</string>
 								<reference key="NSSuperview" ref="16295551"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="372669938"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -164,10 +158,9 @@
 							</object>
 							<object class="IBUIButton" id="766934079">
 								<reference key="NSNextResponder" ref="16295551"/>
-								<int key="NSvFlags">319</int>
-								<string key="NSFrame">{{465, 36}, {123, 74}}</string>
+								<int key="NSvFlags">301</int>
+								<string key="NSFrame">{{572, 36}, {123, 74}}</string>
 								<reference key="NSSuperview" ref="16295551"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="216223711"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -194,10 +187,9 @@
 							</object>
 							<object class="IBUIButton" id="216223711">
 								<reference key="NSNextResponder" ref="16295551"/>
-								<int key="NSvFlags">319</int>
-								<string key="NSFrame">{{273, 116}, {160, 46}}</string>
+								<int key="NSvFlags">301</int>
+								<string key="NSFrame">{{329, 116}, {160, 46}}</string>
 								<reference key="NSSuperview" ref="16295551"/>
-								<reference key="NSWindow"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
@@ -219,9 +211,8 @@
 								</object>
 							</object>
 						</array>
-						<string key="NSFrameSize">{608, 175}</string>
+						<string key="NSFrameSize">{720, 175}</string>
 						<reference key="NSSuperview" ref="410903031"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1054342840"/>
 						<object class="NSColor" key="IBUIBackgroundColor" id="206441262">
 							<int key="NSColorSpace">3</int>
@@ -234,9 +225,8 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</array>
-				<string key="NSFrameSize">{608, 176}</string>
+				<string key="NSFrameSize">{720, 176}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="16295551"/>
 				<reference key="IBUIBackgroundColor" ref="206441262"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -410,76 +400,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">30</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">PPTableViewCell</string>
-					<string key="superclassName">UITableViewCell</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/PPTableViewCell.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">ShoppingCell</string>
-					<string key="superclassName">PPTableViewCell</string>
-					<object class="NSMutableDictionary" key="actions">
-						<string key="NS.key.0">clickBuyButton:</string>
-						<string key="NS.object.0">id</string>
-					</object>
-					<object class="NSMutableDictionary" key="actionInfosByName">
-						<string key="NS.key.0">clickBuyButton:</string>
-						<object class="IBActionInfo" key="NS.object.0">
-							<string key="name">clickBuyButton:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</object>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="buyButton">UIButton</string>
-						<string key="coinImage">UIImageView</string>
-						<string key="costCoinImage">UIImageView</string>
-						<string key="countLabel">UILabel</string>
-						<string key="priceLabel">UILabel</string>
-						<string key="savePercentButton">UIButton</string>
-						<string key="toolImage">UIImageView</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="buyButton">
-							<string key="name">buyButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="coinImage">
-							<string key="name">coinImage</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="costCoinImage">
-							<string key="name">costCoinImage</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="countLabel">
-							<string key="name">countLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="priceLabel">
-							<string key="name">priceLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="savePercentButton">
-							<string key="name">savePercentButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="toolImage">
-							<string key="name">toolImage</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/ShoppingCell.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
